--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@
 
         <div class="section-title about">
           <h2>About</h2>
-          <p>As an economist and developer, they have embraced a lifelong pursuit of knowledge, driven by an insatiable
-            thirst for understanding. A voracious reader and self-taught individual, their passion lies in the
-            intersection of economics and technology. Having attained an esteemed research position with honors at the
-            University of Quindio, their intellectual prowess is complemented by a relentless commitment to honing their
-            skills in the realm of development.</p>
+          <p>As an economist and developer, I am driven by a relentless pursuit of knowledge at the intersection of
+            economics and technology. With a solid academic background as a research student at the University of
+            Quindio and software analyst and developer at SENA, I continuously hone my skills in the field of backend
+            and frontend development.</p>
         </div>
 
         <div class="row">
@@ -99,19 +98,16 @@
               </div>
             </div>
             <p>
-              He is passionate about programming and is proficient in both frontend and backend development. While he
-              appreciates the creative aspects of frontend work, his true leaning is in backend development. With a
-              strong background in databases and data analytics, he enjoys leveraging his skills to create efficient and
-              robust solutions. Continuously driven to improve his skills, he regularly embarks on personal projects
-              that serve as opportunities for growth and improvement. Combining his technical expertise with an
-              unwavering commitment to innovation, he strives to deliver captivating and intellectually stimulating
-              experiences.
-            <p>In addition to the above, he is studying and improving his English, he is also studying on platforms such
-              as <a href="https://platzi.com/p/JeroRm/" target="_blank" rel="noopener noreferrer" title="Platzi JeroRm"
-                class="link-styled">Platzi,<a> </a></a><a href="https://www.udemy.com" target="_blank"
-                rel="noopener noreferrer" title="Platzi JeroRm" class="link-styled">Udemy</a> and <a
-                href="https://www.coursera.org" target="_blank" rel="noopener noreferrer" title="Platzi JeroRm"
-                class="link-styled">Coursera.</a>
+              I'm passionate about programming and have experience in both frontend and backend development. Although I
+              enjoy the creative aspects of frontend work, my true inclination is towards backend development. With
+              extensive knowledge in databases and data analysis, I like to leverage my skills to create efficient and
+              robust solutions. Always willing to improve my skills, I regularly engage in personal projects that
+              provide opportunities for growth and enhancement. By combining my technical expertise with an unwavering
+              commitment to innovation, I strive to deliver captivating and intellectually stimulating experiences.
+            <p>I study programming on these platforms and constantly improve my English. <a
+                href="https://platzi.com/p/JeroRm/" target="_blank" rel="noopener noreferrer" title="Platzi JeroRm"
+                class="link-styled">Platzi<a> <a> and</a> </a></a><a href="https://www.udemy.com" target="_blank"
+                rel="noopener noreferrer" title="UdemyJeroRm" class="link-styled"> Udemy.</a>
             </p>
           </div>
         </div>
@@ -125,13 +121,12 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Combining his experience in frontend and backend development, he has a keen eye for detail and a solid
-            background in economics. Analyzing systems and business models comes naturally to him, which fuels his
-            passion for backend management and data analysis. He leverages his creativity to excel in frontend
-            development. Constantly learning and improving, he is particularly drawn to the API arena. With a strong
-            commitment to innovation, he possesses a versatile skill set that allows him to deliver captivating user
-            experiences while effectively analyzing and manipulating data. Therefore, these are his strongest skills:
-          </p>
+          <p>Combining my experience in frontend and backend development, I have a keen eye for detail and a strong
+            background in economics, as it helps me analyze systems and business models, which fuels my passion for
+            backend management and data analysis. I leverage my creativity to improve in frontend development.
+            Constantly learning, I'm particularly drawn to the API arena. With a strong commitment to innovation,
+            possessing a versatile and team-oriented skill set through GIT, it is important to me to generate good user
+            experiences, captivating while analyzing and manipulating data effectively. So, these are my skills:</p>
         </div>
 
         <div class="row skills-content">
@@ -139,7 +134,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Frontend <i class="val">(HTML, CSS, JavaScript, Vite, React y Django)</i></span>
+              <span class="skill">Frontend <i class="val">(HTML, CSS, Bootstrap, SASS and JavaScript)</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-label="Progress: 75%" aria-valuenow="75"
                   aria-valuemin="0" aria-valuemax="100">
@@ -148,7 +143,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Backend <i class="val">(PYTHON, PHP, Laravel, NodeJS y JAVA)</i></span>
+              <span class="skill">Backend <i class="val">(PHP, Laravel, Django and NodeJS)</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-label="Progress: 70%" aria-valuenow="70"
                   aria-valuemin="0" aria-valuemax="100">
@@ -157,8 +152,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Database Management <i class="val">(MYSQL, MongoDB, Oracle, Docker,
-                  Laragon)</i></span>
+              <span class="skill">Database Management <i class="val">(Oracle and MYSQL)</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-label="Progress: 55%" aria-valuenow="55"
                   aria-valuemin="0" aria-valuemax="100">
@@ -171,7 +165,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Economic analysis managemen t<i class="val">(R, Python, Stata y Excel)</i></span>
+              <span class="skill">Economic analysis managemen t<i class="val">(R, Python, Stata and Excel)</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-label="Progress: 85%" aria-valuenow="85"
                   aria-valuemin="0" aria-valuemax="100">
@@ -180,7 +174,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Data analysis management <i class="val">(Pandas, Numpy, matplotlib y
+              <span class="skill">Data analysis management <i class="val">(Python, Pandas, Numpy, matplotlib y
                   Seaborn)</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-label="Progress: 65%" aria-valuenow="65"
@@ -190,7 +184,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Other programs, models and software<i class="val">(Microsoft Office, ERP and
+              <span class="skill">Other programs, models and software<i class="val">(Java, ERP and
                   MVC)</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-label="Progress: 60%" aria-valuenow="60"
@@ -212,9 +206,8 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p style="text-align: center;">If you wish to download Jeronimo's resume, to see his trajectory, his studies
-            and the experience he has been gaining over time I can contact him at the bottom of the page in the contact
-            section.</p>
+          <p style="text-align: center;">If you want to download my resume, to see my entire career, you can contact me
+            through the contact section.</p>
         </div>
 
       </div>
@@ -226,13 +219,12 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p style="text-align: center;">Here he will put all his projects that he has done and will do. It is under
-            construction, since he is studying and deepening in APIS. The portfolio has varied over time, as he has
-            built creative projects applying
-            his knowledge in platforms he has studied, below, you can see some of them with a link to his github.</p>
+          <p>This is the section where I show my projects (under construction). I continuously study and explore APIs,
+            as well as delve into the frontend and backend, which results in a diverse portfolio, I have some algorithms
+            and test projects. Below you can see my github.</p>
         </div>
 
-        <div class="row">
+        <!--<<div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -243,7 +235,7 @@
           </div>
         </div>
 
-        <!--<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+        div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
@@ -413,8 +405,8 @@
         <div class="section-title">
           <h2>Services</h2>
           <p>This space is to put some services that will be available and that are being used by companies or
-            individuals, it is currently under construction, but you can see different projects in their github page or
-            see a little about their trajectory in linkedin.</p>
+            individuals, it is currently under construction, but you can see different projects in my github page or see
+            a little about my trajectory in linkedin.</p>
         </div>
 
         <div class="row">
@@ -431,7 +423,7 @@
               </div>
               <h4><a>Project 1</a></h4>
               <p style="color: rgb(110, 116, 129);">This project is under construction, currently there are several
-                works that you can see in their github.</p>
+                works that you can see in my github.</p>
             </div>
           </div>
 
@@ -448,7 +440,7 @@
               </div>
               <h4><a>Project 2</a></h4>
               <p style="color: rgb(110, 116, 129);">This project is under construction, currently there are several
-                works that you can see in their github.</p>
+                works that you can see in my github.</p>
             </div>
           </div>
 
@@ -465,7 +457,7 @@
               </div>
               <h4><a>Project 3</a></h4>
               <p style="color: rgb(110, 116, 129);">This project is under construction, currently there are several
-                works that you can see in their github.</p>
+                works that you can see in my github.</p>
             </div>
           </div>
         </div>
