--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <link rel="stylesheet" href="/node_modules/glightbox/dist/css/glightbox.min.css">
   <!-- Swiper -->
   <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.min.css">
+  <!-- ReCaptcha -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 </head>
 
@@ -63,8 +65,6 @@
       <h1>Jeronimo Ramírez Mejía</h1>
       <p>I'm <span class="typed" data-typed-items="Developer and Economist."></span></p>
       <div class="social-links">
-        <a href="https://www.instagram.com/jero.rm/" target="_blank" rel="noopener noreferrer" class="instagram"
-          title="Instagram JeroRm"><i class="bx bxl-instagram"></i></a>
         <a href="https://co.linkedin.com/in/jeronimo-ramirez-mejia" target="_blank" rel="noopener noreferrer"
           class="linkedin" title="Linkedin JeroRm"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/TheHakoDrako" target="_blank" rel="noopener noreferrer" class="github"><i
@@ -92,7 +92,6 @@
             <img src="/src/assets/img/me.png" alt="Jero Rm" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Developer &amp; Economist.</h3>
             <div class="row">
               <div class="col-lg-6">
               </div>
@@ -136,7 +135,7 @@
             <div class="progress">
               <span class="skill">Frontend <i class="val">(HTML, CSS, Bootstrap, SASS and JavaScript)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-label="Progress: 75%" aria-valuenow="75"
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 64%" aria-valuenow="64"
                   aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
@@ -145,7 +144,7 @@
             <div class="progress">
               <span class="skill">Backend <i class="val">(PHP, Laravel, Django and NodeJS)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-label="Progress: 70%" aria-valuenow="70"
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 62%" aria-valuenow="62"
                   aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
@@ -154,7 +153,7 @@
             <div class="progress">
               <span class="skill">Database Management <i class="val">(Oracle and MYSQL)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-label="Progress: 55%" aria-valuenow="55"
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 50%" aria-valuenow="50"
                   aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
@@ -167,7 +166,7 @@
             <div class="progress">
               <span class="skill">Economic analysis managemen t<i class="val">(R, Python, Stata and Excel)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-label="Progress: 85%" aria-valuenow="85"
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 65%" aria-valuenow="65"
                   aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
@@ -177,7 +176,7 @@
               <span class="skill">Data analysis management <i class="val">(Python, Pandas, Numpy, matplotlib y
                   Seaborn)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-label="Progress: 65%" aria-valuenow="65"
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 45%" aria-valuenow="45"
                   aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
@@ -187,7 +186,7 @@
               <span class="skill">Other programs, models and software<i class="val">(Java, ERP and
                   MVC)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-label="Progress: 60%" aria-valuenow="60"
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 40%" aria-valuenow="40"
                   aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
@@ -223,166 +222,6 @@
             as well as delve into the frontend and backend, which results in a diverse portfolio, I have some algorithms
             and test projects. Below you can see my github.</p>
         </div>
-
-        <!--<<div class="row">
-          <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
-            </ul>
-          </div>
-        </div>
-
-        div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i
-                      class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i
-                      class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i
-                      class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i
-                      class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i
-                      class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i
-                      class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i
-                      class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i
-                      class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i
-                      class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>-->
 
         <div class="col-lg col-sm">
           <a class="card-box" href="https://github.com/TheHakoDrako" target="_blank" rel="noopener noreferrer"
@@ -546,39 +385,44 @@
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
+        <div class="section-title contact">
           <h2>Contact</h2>
         </div>
 
         <div class="row mt-1">
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="" method="" role="form" class="php-email-form">
+            <form id="contact-form" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <label class="formTittle" for="name">Name</label>
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <label class="formTittle" for="name">Email</label>
+                  <label class="formTittle" for="email">Email</label>
                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <label class="formTittle" for="name">Subject</label>
+                <label class="formTittle" for="subject">Subject</label>
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
-                <label class="formTittle" for="name">Message</label>
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <label class="formTittle" for="message">Message</label>
+                <textarea class="form-control" name="message" rows="5" id="message" placeholder="Message"
+                  required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="contact-recaptcha">
+                <div class="g-recaptcha" data-sitekey="6Le4K7IjAAAAAPeRP-H1OPNeCrbIRYZQ2Erb-5rW"></div>
+              </div>
+              <div class="text-center"><button type="submit" data-callback="onSubmit">Send Message</button></div>
             </form>
+            <div id="contact-form-message"></div>
 
           </div>
         </div>
